chore: download publish artifacts to named assets directory
Since the individual uploads of the assets are done in a matrix,
we don't have a unified archive for assets. Therefore, we instead
download all artifacts to a single directory, and the action then
unpacks and merges all of the artifacts into that directory for
later release.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -660,7 +660,8 @@
                "name": "Download release artifacts",
                "uses": "actions/download-artifact@v4",
                "with": {
-                  "merge-multiple": true
+                  "merge-multiple": true,
+                  "path": "assets"
                }
             },
             {
