chore: create tag for each release and use for publishing
This follows the same syntax used to stamp the Docker images, so
all artifacts should be kept entirely in sync.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -669,11 +669,17 @@
                "run": "shasum -a 256 assets/* > sha256"
             },
             {
+               "id": "create_tag",
+               "name": "Generate tag",
+               "run": "BUILD_SCM_REVISION=$(git rev-parse --short HEAD)\nBUILD_SCM_TIMESTAMP=$(TZ=UTC date --date \"@$(git show -s --format=%ct HEAD)\" +%Y%m%dT%H%M%SZ)\nRELEASE_TAG=\"${BUILD_SCM_TIMESTAMP}-${BUILD_SCM_REVISION}}\"\ngit tag -a $RELEASE_TAG\ngit push --follow-tags\necho \"release_tag=$RELEASE_TAG\" >> $GITHUB_OUTPUT\n"
+            },
+            {
                "name": "Create GitHub release and upload artifacts",
                "uses": "softprops/action-gh-release@v2",
                "with": {
                   "files": "assets/*\nsha256\n",
-                  "make_latest": true
+                  "make_latest": true,
+                  "tag_name": "${{ steps.create_tag.outputs.release_tag }}"
                }
             }
          ]
