chore: checkout repository before cutting new tag
This is needed to generate the proper tag and then push the tag
back upstream.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -657,6 +657,10 @@
          "runs-on": "ubuntu-latest",
          "steps": [
             {
+               "name": "Checkout the repository",
+               "uses": "actions/checkout@v4 "
+            },
+            {
                "name": "Download release artifacts",
                "uses": "actions/download-artifact@v4",
                "with": {
